--- a/tous/html/connexion.html
+++ b/tous/html/connexion.html
@@ -50,8 +50,8 @@
         <div class="image"> <img src="../image/image.jfif"></div>
         <div class="valid" style="position:relative;">
           <h2 class="title">Connexion</h2>
-          <input type="text" id="name" name="email" placeholder="Email" oninput="validemail(0)">
-          <input type="password" id="password" name="password" placeholder="Votre mot de passe" oninput="validpassword(0)">
+          <input type="text" id="email1" name="email" placeholder="Email" oninput="validemail(0)">
+          <input type="password" id="pasword1" name="password" placeholder="Votre mot de passe" oninput="validpassword(0)">
 
           <!-- <input type="password" id="confirmation" name="confirmation" placeholder="confirmer votre mot de passe" oninput="confirmation_password(0)"> -->
 
