--- a/tous/html/inscription.html
+++ b/tous/html/inscription.html
@@ -228,7 +228,7 @@
 
 
 
-            <button class="button type2" name="button type2" onclick="age();">
+            <button class="button type2" name="button type2" onclick="reservation();">
                 <i class="fas fa-check"></i>&emsp;reservez
             </button>
          
