--- a/tous/html/connexion.html
+++ b/tous/html/connexion.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF_8" />
-  <link rel="stylesheet" href="../css/gallerie.css">
+  <link rel="stylesheet" href="../css/cnx.css">
   <title>HomeliDays</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
